# RayTracing

./: CMakeLists.txt
src/: CMakeLists.txt  CONFIG.h  main.cpp
src/display/: CMakeLists.txt  Camera.cpp  Camera.h  Model.cpp  Model.h  PpmDisplayer.cpp  PpmDisplayer.h
src/geometry/: RGB.h  Ray.cpp  Ray.h  Vector3D.h
src/geometry/Shapes/: Collidable.cpp  Collidable.h  Sphere.cpp  Sphere.h
src/geometry/materials/: Dielectric.cpp  Dielectric.h  Lambertian.cpp  Lambertian.h  Material.cpp  Material.h  Metals.cpp  Metals.h
src/geometry/primitives/: HitRecord.cpp  HitRecord.h  RGB.cpp  Vector3D.cpp  Vector3D.h
